quiz_server/public/css/style.css
/* ... */
.accordion-trigger {
    background: transparent;
    border: 0;
    font: inherit;
    color: inherit;
}

.accordion-trigger.more-info {
    font-size: 26px !important;
}

.accordion-trigger::before,
.accordion-trigger::after {
    position: absolute;
    right: 1rem;
    content: "";
    display: block;
    width: 1em;
    height: 5px;
    background: currentcolor;
    transition: transform 1s;
    border-radius: 2px;
}

.accordion-trigger::after {
    rotate: 90deg;
    translate: 0 -1.5em;
}

.accordion-trigger[aria-expanded="true"]::before,
.accordion-trigger[aria-expanded="true"]::after {
    transform: rotate(45deg);
}

.accordion-trigger.more-info[aria-expanded="true"]::before,
.accordion-trigger.more-info[aria-expanded="true"]::after {
    transform: rotate(405deg);
}

#favorite-quote-container,
#blacklist-quote-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    padding: 0;
    margin: 0;
}

#edit-reason-input-container {
    display: grid;
    grid-template-rows: 0fr;
    transition: grid-template-rows 500ms;
}

#edit-reason-input-container[aria-hidden="false"] {
    grid-template-rows: 1fr;
}

#edit-reason-input-container > form {
    overflow: hidden;
}

#edit-reason-input-container {
    padding: 1rem 0 0 0;
}

#edit-reason-input-container a {
    color: var(--dark-yellow-color);
    transition: 500ms;
    margin-left: 10px;
    font-size: 24px;
}

#edit-reason-input-container input[type="submit"] {
    font-size: 22px;
}

#edit-reason-input-container a:hover {
    color: var(--light-yellow-color);
}

#edit-reason {
    filter: invert(1);
    padding: 0 0 0 1rem;
    width: 18px;
    height: 18px;
    cursor: pointer;
    transition: 500ms;
}

#edit-reason:hover {
    transform: scale(1.1);
}

#edit-reason-text-input {
    width: 200px;
    height: 26px;
    font-size: 18px;
    vertical-align: bottom;
}

#delete-quote-article {
    max-width: 35px;
    max-height: 35px;
    align-self: center;
}

#delete-quote>img {
    width: 25px;
    height: 25px;
    transition: 500ms;
}

#delete-quote>img:hover {
    transform: scale(1.1);
}

.quote:has(+ #delete-quote-article) {
    transition: 100ms;
}

.quote:has(+ #delete-quote-article:hover) {
    text-decoration: red line-through;
    opacity: 0.85;
}

#blacklist-reason {
    font-size: 18px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    color: #FFF;
}




/*#endregion*/

/*#region------------------------------MEDIA QUERIES----------------------------*/



/* 
@media all and (max-width: 1000px){
   
    
} */


@media all and (max-width:885px) {

    body {
        overflow: auto;
    }

    .link-button {
        margin: 0.5rem;
    }

    #quote-section {
        flex-direction: column;
        justify-content: center;
        margin: 0 auto;
        height: auto;
        padding: 0;
        max-height: 100% !important;
    }

    #quote-article {
        flex-direction: column;
        justify-content: center;
        margin: 0 auto;
        height: auto;
        padding: 0;
    }

    #quote-section>h3 {
        padding: 0.5rem 0 0 0;
    }

    #quote {
        padding: 0;
    }
}

@media all and (max-width: 863px) {

    .main {
        margin-top: 70px;
        transition: margin-top 0.5s;
    }
}

@media all and (max-width: 700px) {

    #index-container {
        flex-direction: column;
    }
}

@media all and (max-width:550px) {

    form {
        flex-direction: column;
    }

    #aside {
        padding: 1rem;
    }

    .movie {
        margin-bottom: 0.5rem;
    }

    .character {
        margin-top: 0.5rem;
    }

    #quote-section {
        position: sticky;
        left: 0;
        bottom: 0;
    }

    #quote {
        font-size: 24px;
    }
}

@media all and (max-width:450px) {
    .main {
        margin-top: 105px;
        transition: margin-top 0.5s;
    }
}

@media all and (max-width:430px) {

    #header-container{
        flex-direction: column;
        text-align: center;
    }

    .dropdown-content {
        top: 195px;
    }

    .main {
        margin-top: 105px;
        transition: margin-top 0.5s;
    }
}

/*#endregion*/

